# Ingest

./: .ruff.toml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
scripts/: create_tables.py  dry_run.py  run_playstore_poc.py  test_db.py
src/adapters/: discourse.py  intercom.py  intercom_push.py  playstore.py  twitter.py
src/app/: main.py
src/config/: settings.py
src/core/: exceptions.py  models.py
src/db/: models.py  session.py
src/ports/: fetcher.py  push_handler.py
src/services/: ingest.py
src/utils/: time_utils.py
src/workers/: scheduler.py
tests/adapters/: mock_discourse_response.json  mock_intercom_push.json  mock_intercom_response.json  mock_playstore_response.json  mock_twitter_response.json  test_discourse.py  test_intercom.py  test_intercom_push.py  test_playstore.py  test_twitter.py
tests/services/: test_ingest.py
