[project]
name = "ingest"
version = "0.1.0"
description = "Ingest data from multiple sources and collate into a common feedback sink"
authors = [
    {name = "Amrit Kochar",email = "amritkochar.007@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
