[project]
name = "ingest"
version = "0.1.0"
description = "Ingest data from multiple sources and collate into a common feedback sink"
authors = [
    {name = "Amrit Kochar",email = "amritkochar.007@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pydantic-core (>=2.34.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

packages = [
  { include = "app",      from = "src" },
  { include = "config",   from = "src" },
  { include = "core",     from = "src" },
  { include = "ports",    from = "src" },
  { include = "adapters", from = "src" },
  { include = "services", from = "src" },
  { include = "db",       from = "src" },
  { include = "workers",  from = "src" },
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
ruff = "^0.11.9"
black = "^25.1.0"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
alembic = "^1.15.2"
faker = "^37.3.0"
pytest-httpx = "^0.35.0"
pytest-postgresql = "^7.0.1"
aiosqlite = "^0.21.0"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]
